--- a/public/404.html
+++ b/public/404.html
@@ -17,7 +17,7 @@
   <meta name="description" content="Compare yourself to who you were yesterday, not to who someone else is today." />
   
   
-  <link rel="canonical" href="http://localhost:1313/404.html" />
+  <link rel="canonical" href="//localhost:1313/404.html" />
 
   
 
@@ -76,7 +76,7 @@
     <link rel="manifest" href="/site.webmanifest" />
   
 
-  <meta property="og:url" content="http://localhost:1313/404.html">
+  <meta property="og:url" content="//localhost:1313/404.html">
   <meta property="og:site_name" content="n3s0 || journal">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Compare yourself to who you were yesterday, not to who someone else is today.">
@@ -125,7 +125,7 @@
   
   
   
-    <link rel="preload" href="http://localhost:1313/fonts/Ubuntu-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="//localhost:1313/fonts/Ubuntu-Regular.woff2" as="font" type="font/woff2" crossorigin>
   
 
   
@@ -187,7 +187,7 @@
 
 </button>
 
-<div id="search-container" data-url="http://localhost:1313/">
+<div id="search-container" data-url="//localhost:1313/">
   <div class="search">
     <div class="panel">
       <form>
