--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Compare yourself to who you were yesterday, not to who someone else is today." />
   
   
-  <link rel="canonical" href="http://localhost:1313/" />
+  <link rel="canonical" href="//localhost:1313/" />
 
   
 
@@ -79,10 +79,10 @@
 
   <link rel="alternate" type="application/rss+xml" href="/index.xml" title="n3s0 || journal" />
   <link rel="alternate" type="application/json" href="/index.json" title="n3s0 || journal" />
-  <meta property="og:url" content="http://localhost:1313/">
+  <meta property="og:url" content="//localhost:1313/">
   <meta property="og:site_name" content="n3s0 || journal">
   <meta property="og:title" content="n3s0 || journal">
-  <meta property="og:description" content="Compare yourself to who you were yesterday, not to who someone else is today.">
+  <meta property="og:description" content="n3s0 || journal is a place where I share my thoughts on a wide variety of topics. The entries are complimented by notes and projects or they’re just something I thought I’d talk about.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -90,7 +90,7 @@
   
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="n3s0 || journal">
-  <meta name="twitter:description" content="Compare yourself to who you were yesterday, not to who someone else is today.">
+  <meta name="twitter:description" content="n3s0 || journal is a place where I share my thoughts on a wide variety of topics. The entries are complimented by notes and projects or they’re just something I thought I’d talk about.">
 
   
 
@@ -128,12 +128,12 @@
   
   
   
-    <link rel="preload" href="http://localhost:1313/fonts/Ubuntu-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="//localhost:1313/fonts/Ubuntu-Regular.woff2" as="font" type="font/woff2" crossorigin>
   
 
   
 
-  <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="n3s0 || journal">
+  <link rel="alternate" type="application/rss+xml" href="//localhost:1313/index.xml" title="n3s0 || journal">
   
 
 </head>
@@ -191,7 +191,7 @@
 
 </button>
 
-<div id="search-container" data-url="http://localhost:1313/">
+<div id="search-container" data-url="//localhost:1313/">
   <div class="search">
     <div class="panel">
       <form>
@@ -312,6 +312,19 @@
 
 
 
+<p>n3s0 || journal is a place where I share my thoughts on a wide variety
+of topics. The entries are complimented by notes and projects or they&rsquo;re
+just something I thought I&rsquo;d talk about.</p>
+<p>My interests very between networking, coding, sysadmin, etc. to watches,
+firearms, hiking, jiu jitsu, travel, books etc. As long as I have the ability
+and the opportunity to write. I will.</p>
+<p>Of course, if you found anything I&rsquo;ve posted useful. Feel free to send
+me an email. I love hearing feedback of any kind!</p>
+<p>With that being said. One motto that I live by:</p>
+<blockquote>
+<p>&ldquo;Compare yourself to who you were yesterday, not to who someone else is today.&rdquo;
+&ndash; Jordon Peterson</p>
+</blockquote>
 
 
 
@@ -334,6 +347,16 @@
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M207.8 20.73c-93.45 18.32-168.7 93.66-187 187.1c-27.64 140.9 68.65 266.2 199.1 285.1c19.01 2.888 36.17-12.26 36.17-31.49l.0001-.6631c0-15.74-11.44-28.88-26.84-31.24c-84.35-12.98-149.2-86.13-149.2-174.2c0-102.9 88.61-185.5 193.4-175.4c91.54 8.869 158.6 91.25 158.6 183.2l0 16.16c0 22.09-17.94 40.05-40 40.05s-40.01-17.96-40.01-40.05v-120.1c0-8.847-7.161-16.02-16.01-16.02l-31.98 .0036c-7.299 0-13.2 4.992-15.12 11.68c-24.85-12.15-54.24-16.38-86.06-5.106c-38.75 13.73-68.12 48.91-73.72 89.64c-9.483 69.01 43.81 128 110.9 128c26.44 0 50.43-9.544 69.59-24.88c24 31.3 65.23 48.69 109.4 37.49C465.2 369.3 496 324.1 495.1 277.2V256.3C495.1 107.1 361.2-9.332 207.8 20.73zM239.1 304.3c-26.47 0-48-21.56-48-48.05s21.53-48.05 48-48.05s48 21.56 48 48.05S266.5 304.3 239.1 304.3z"/></svg>
 
+
+
+            </span>
+        </a>
+    </li><li>
+        <a href="/index.xml" rel="me" title="rss" target="_blank">
+            <span class="socials-icon">
+            
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M0 64C0 46.3 14.3 32 32 32c229.8 0 416 186.2 416 416c0 17.7-14.3 32-32 32s-32-14.3-32-32C384 253.6 226.4 96 32 96C14.3 96 0 81.7 0 64zM128 416c0 35.3-28.7 64-64 64s-64-28.7-64-64s28.7-64 64-64s64 28.7 64 64zM32 160c159.1 0 288 128.9 288 288c0 17.7-14.3 32-32 32s-32-14.3-32-32c0-123.7-100.3-224-224-224c-17.7 0-32-14.3-32-32s14.3-32 32-32z"/></svg>
 
 
             </span>
