--- a/public/notes/index.html
+++ b/public/notes/index.html
@@ -17,7 +17,7 @@
   <meta name="description" content="Compare yourself to who you were yesterday, not to who someone else is today." />
   
   
-  <link rel="canonical" href="http://localhost:1313/notes/" />
+  <link rel="canonical" href="//localhost:1313/notes/" />
 
   
 
@@ -77,10 +77,10 @@
   
 
   <link rel="alternate" type="application/rss+xml" href="/notes/index.xml" title="n3s0 || journal" />
-  <meta property="og:url" content="http://localhost:1313/notes/">
+  <meta property="og:url" content="//localhost:1313/notes/">
   <meta property="og:site_name" content="n3s0 || journal">
   <meta property="og:title" content="notes">
-  <meta property="og:description" content="Compare yourself to who you were yesterday, not to who someone else is today.">
+  <meta property="og:description" content="For learning tidbits or little TIL (Today I Learned) articles.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -88,7 +88,7 @@
   
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="notes">
-  <meta name="twitter:description" content="Compare yourself to who you were yesterday, not to who someone else is today.">
+  <meta name="twitter:description" content="For learning tidbits or little TIL (Today I Learned) articles.">
 
   
 
@@ -126,12 +126,12 @@
   
   
   
-    <link rel="preload" href="http://localhost:1313/fonts/Ubuntu-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="//localhost:1313/fonts/Ubuntu-Regular.woff2" as="font" type="font/woff2" crossorigin>
   
 
   
 
-  <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/notes/index.xml" title="n3s0 || journal">
+  <link rel="alternate" type="application/rss+xml" href="//localhost:1313/notes/index.xml" title="n3s0 || journal">
   
 
 </head>
@@ -189,7 +189,7 @@
 
 </button>
 
-<div id="search-container" data-url="http://localhost:1313/">
+<div id="search-container" data-url="//localhost:1313/">
   <div class="search">
     <div class="panel">
       <form>
