--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -17,7 +17,7 @@
   <meta name="description" content="Compare yourself to who you were yesterday, not to who someone else is today." />
   
   
-  <link rel="canonical" href="http://localhost:1313/projects/" />
+  <link rel="canonical" href="//localhost:1313/projects/" />
 
   
 
@@ -77,7 +77,7 @@
   
 
   <link rel="alternate" type="application/rss+xml" href="/projects/index.xml" title="n3s0 || journal" />
-  <meta property="og:url" content="http://localhost:1313/projects/">
+  <meta property="og:url" content="//localhost:1313/projects/">
   <meta property="og:site_name" content="n3s0 || journal">
   <meta property="og:title" content="projects">
   <meta property="og:description" content="Compare yourself to who you were yesterday, not to who someone else is today.">
@@ -126,12 +126,12 @@
   
   
   
-    <link rel="preload" href="http://localhost:1313/fonts/Ubuntu-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="//localhost:1313/fonts/Ubuntu-Regular.woff2" as="font" type="font/woff2" crossorigin>
   
 
   
 
-  <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/projects/index.xml" title="n3s0 || journal">
+  <link rel="alternate" type="application/rss+xml" href="//localhost:1313/projects/index.xml" title="n3s0 || journal">
   
 
 </head>
@@ -189,7 +189,7 @@
 
 </button>
 
-<div id="search-container" data-url="http://localhost:1313/">
+<div id="search-container" data-url="//localhost:1313/">
   <div class="search">
     <div class="panel">
       <form>
