--- a/public/notes/index.html
+++ b/public/notes/index.html
@@ -80,7 +80,7 @@
   <meta property="og:url" content="//localhost:1313/notes/">
   <meta property="og:site_name" content="n3s0 || journal">
   <meta property="og:title" content="notes">
-  <meta property="og:description" content="For learning tidbits or little TIL (Today I Learned) articles.">
+  <meta property="og:description" content="Compare yourself to who you were yesterday, not to who someone else is today.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -88,7 +88,7 @@
   
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="notes">
-  <meta name="twitter:description" content="For learning tidbits or little TIL (Today I Learned) articles.">
+  <meta name="twitter:description" content="Compare yourself to who you were yesterday, not to who someone else is today.">
 
   
 
